--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="about">My Blog:\nhttp://drakeet.me \t贝壳单词：http://fir.im/seashell</string>
 
     <!-- Part 1-->
     <string name="status">status</string>
