--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="about">My Blog:\nhttp://drakeet.me \t贝壳单词：http://fir.im/seashell</string>
+    <string name="prod_name">Nama Produk : </string>
+    <string name="prod_shop_name">Nama Toko : </string>
+    <string name="prod_price">Harga Produk : </string>
+    <string name="bought_review_view">x Diskusi y Ulasan</string>
 
     <!-- Part 1-->
     <string name="status">status</string>
